# epic-manager

./: .gitignore  CLAUDE.md  IMPLEMENTATION_PLAN.md  README.md  SPECIFICATION.md  USER_GUIDE.md  pyproject.toml  requirements.txt  setup.py  validation_test.py
.claude/: settings.local.json
.claude/skills/epic-planning/: SKILL.md  dependency-analysis.md
.claude/skills/pr-submission/: SKILL.md  stack-verification.md
.claude/skills/review-fixer/: SKILL.md  pr-verification.md
.claude/skills/tdd-graphite-workflow/: SKILL.md  graphite-commands.md  integration-tests.md  schema-compliance.md  schema-discovery.md
config/: default_config.yaml
docs/: TUI_DESIGN_PLAN.md
epic_manager/: __init__.py  claude_automation.py  cli.py  config.py  graphite_integration.py  instance_discovery.py  models.py  orchestrator.py  prompts.py  review_monitor.py  workspace_manager.py
epic_manager/tui/: __init__.py  dashboard.py  progress_tracker.py  stack_viewer.py
tests/: conftest.py  test_cli.py  test_instance_discovery.py  test_integration_claude_sdk.py  test_integration_worktree.py  test_orchestrator.py  test_workspace_manager.py
